--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,18 @@ input[type="radio"].visually-hidden {
   margin-right: auto;
 }
 
-.wrapper__catalog {
+.wrapper__catalog-top,
+.wrapper__catalog-main {
+  width: 1160px;
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.catalog-top__container,
+.catalog-main__container {
   display: flex;
-  justify-content: center;
-  min-width: 1160px;
-  padding: 0 100%;
+  padding-left: 59px;
 }
 
 .wrapper__header {
@@ -1607,50 +1614,14 @@ input[type="radio"].visually-hidden {
 .catalog {
   display: flex;
   justify-content: center;
-
 }
 
-.catalog__container:nth-of-type(1) {
-  min-width: 331px;
-  background-color: #efefef;
-  background-attachment: content-box;
-
+.catalog-top__bg-gradient_gray-lightgray {
+  background: linear-gradient(to right, #dcdcdc 0, #dcdcdc 50%, #ebebeb 50%, #ebebeb);
 }
 
-/*.catalog::before {
-  position: absolute;
-  content: "";
-  width: 20%;
-  height: 100%;
-  background-color: #efefef;
-  z-index: -1;
-
-}*/
-
-.catalog__container:nth-of-type(2) {
-  min-width: 832px;
-}
-
-.catalog::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 70px;
-  background-color: rgba(0, 0, 0, 0.08);
-  z-index: -1;
-  left: 0;
-  top: 0;
-}
-
-.wrapper__catalog-title,
-.wrapper__catalog-filter {
-
-  text-align: right;
-}
-
-.wrapper__catalog-sorting,
-.wrapper__catalog-main {
-  text-align: left;
+.catalog-main__bg-gradient_lightgray-white {
+  background: linear-gradient(to right, #ebebeb 0, #ebebeb 50%, #ffffff 50%, #ffffff);
 }
 
 .catalog__filter {
@@ -1660,16 +1631,15 @@ input[type="radio"].visually-hidden {
 
 /*Блок Фильтр*/
 .filter {
-  padding-top: 82px;
+  padding-top: 69px;
+  margin-right: 68px;
   display: flex;
   flex-direction: column;
-  width: 270px;
 }
 
 .filter-title {
-  text-align: right;
   margin: 0;
-  padding-right: 177px;
+  width: 268px;
   padding-top: 23px;
   padding-bottom: 23px;
   font-family: "Gilroy", "Arial", sans-serif;
@@ -1679,41 +1649,33 @@ input[type="radio"].visually-hidden {
   color: #000000;
   text-transform: uppercase;
   letter-spacing: 3.7px;
-
 }
 
-.catalog-filter__content {
-  /*background-color: #efefef;*/
-}
+.filter__section {
+  width: 201px;
 
-.filter__cost-range,
-.filter__color,
-.filter__bluetooth {
   border: none;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 26px;
   padding: 0;
+}
+
+.filter__last-section_margin-bottom {
+  margin-bottom: 34px;
 }
 
 .filter__item-title {
   position: relative;
-  padding-right: 166px;
+  padding-top: 10px;
+  width: 201px;
   font-family: "Gilroy", "Arial", sans-serif;
   font-weight: 800;
   font-size: 16px;
   line-height: 24px;
   color: #000000;
   letter-spacing: 1.4px;
-}
 
-.filter__item-title::before {
-  position: absolute;
-  content: "";
-  width: 201px;
-  height: 2px;
-  background-color: #000000;
-  top: -13px;
-  left: 2px;
+  border-top: 2px solid #000000;
 }
 
 
@@ -1730,23 +1692,17 @@ input[type="radio"].visually-hidden {
   z-index: 1;
 }
 
-.filter__checkbox_hidden,
-.filter__radio_hidden {
-  display: none;
-}
-
 /*Блок range-scale*/
 .cost-range {
-  padding-right: 10px;
   padding-bottom: 6px;
 }
 
 .cost-range_range {
   position: relative;
-  width: 206px;
+  width: 200px;
   height: 2px;
-  background-color: #dbdbdb;
-  margin: 34px 58px;
+  background: linear-gradient(to right, #91c92f 0, #91c92f 58%, #dbdbdb 58%, #dbdbdb);
+  margin: 35px 58px;
   margin-left: auto;
 }
 
@@ -1755,8 +1711,8 @@ input[type="radio"].visually-hidden {
   border: none;
   width: 20px;
   height: 23px;
-  top: 50%;
-  left: 0;
+  top: 75%;
+  left: -5px;
   transform: translateY(-50%);
   background-color: transparent;
   background-image: url("../img/icon/filter-button.svg");
@@ -1768,15 +1724,20 @@ input[type="radio"].visually-hidden {
   border: none;
   width: 20px;
   height: 23px;
-  top: 50%;
-  right: 73px;
+  top: 75%;
+  right: 72px;
   transform: translateY(-50%);
   background-color: transparent;
   background-image: url("../img/icon/filter-button.svg");
   background-repeat: no-repeat;
 }
 
+.filter__cost-input {
+  display: flex;
+}
+
 .cost-range__input-min-cost {
+  margin-right: 5px;
   padding-top: 11px;
   padding-bottom: 0;
   font-family: "Gilroy", "Arial", sans-serif;
@@ -1793,7 +1754,6 @@ input[type="radio"].visually-hidden {
 
 .cost-range__input-max-cost {
   padding-top: 11px;
-  padding-right: 28px;
   padding-bottom: 0;
   font-family: "Gilroy", "Arial", sans-serif;
   font-weight: 300;
@@ -1807,37 +1767,98 @@ input[type="radio"].visually-hidden {
   width: 85px;
 }
 
+
+
 /*Блок фильтр по цвету*/
 .filter-color {
-  padding-right: 10px;
   padding-bottom: 5px;
   padding-top: 10px;
   display: flex;
   flex-direction: column;
 }
 
+.filter-color__item-title_margin-bottom {
+  margin-bottom: 8px;
+}
+
 .filter__color-items {
   display: flex;
   flex-direction: column;
-  width: 262px;
-  align-items: flex-end;
+  width: 201px;
+}
+
+.filter__checkbox-label {
+
+  padding-left: 39px;
+
+}
+
+.filter__label {
+  position: relative;
+}
+
+.filter__label::before {
+  position: absolute;
+  content: "";
+}
+
+.filter__checkbox-label::before {
+  width: 27px;
+  height: 23px;
+  left: -1px;
+  bottom: 9px;
+  background-repeat: no-repeat;
+}
+
+.filter__checkbox:not(:checked) + .filter__checkbox-label::before {
+  background-image: url("../img/icon/checkbox-off.svg");
+}
+
+.filter__checkbox:checked + .filter__checkbox-label::before {
+  background-image: url("../img/icon/checkbox-on.svg");
 }
 
 /*Блок фильтр наличия bluetoth*/
 .filter__bluetooth-items {
   display: flex;
   flex-direction: column;
+  padding-top: 18px;
 }
 
-/*Блок Сортировка+Каталог*/
-.catalog__content {
-  display: flex;
-  flex-direction: column;
+.filter__radio-label {
+  padding-left: 39px;
+}
+
+.filter__radio-label::before {
+  width: 25px;
+  height: 25px;
+  left: -1px;
+  bottom: 9px;
+  background-repeat: no-repeat;
+}
+
+.filter__radio:not(:checked) + .filter__radio-label::before {
+  background-image: url("../img/icon/radio-off.svg");
+
+}
+
+.filter__radio:checked + .filter__radio-label::before {
+  background-image: url("../img/icon/radio-on.svg");
+}
+
+.filter__button {
+  padding: 5px 41px;
+}
+
+.filter__button::before {
+  width: 200px;
+  left: -1px;
 }
 
 /*Блок сортировка*/
 .sorting {
  display: flex;
+ background-color: #ebebeb;
 }
 
 .sorting__title {
@@ -1881,15 +1902,139 @@ input[type="radio"].visually-hidden {
   margin-right: 0;
 }
 
-/*Блок catalog__main*/
-.wrapper__catalog-main {
+/*Блок Каталог*/
+
+.catalog__container {
   background-color: #ffffff;
 }
-
 .catalog__main {
-
-  padding-top: 70px;
+  padding-top: 69px;
   padding-left: 72px;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.catalog__item {
+  position: relative;
+  margin-bottom: 17px;
+}
+
+.catalog-item__new-item {
+  position: absolute;
+  top: 47px;
+  right: 40px;
+
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.1);
+}
+
+.catalog-item__new-item::before {
+  position: absolute;
+  content: "";
+  bottom: 50%;
+  transform: translateY(50%);
+  left: -50%;
+
+  width: 56px;
+  height: 56px;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.catalog-item__product-picture {
+  background-color: #eeeeee;
+  margin-bottom: 5px;
+}
+
+.catalog-item__image {
+  vertical-align: top;
+}
+
+.catalog-item__info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.catalog-item__title {
+  margin: 0;
+  padding: 28px 0;
+
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  width: 260px;
+  overflow-wrap: break-word;
+}
+
+.catalog-item__width_short {
+  width: 230px;
+}
+
+.catalog-item__price {
+  padding: 27px 0;
+
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  color: #464646;
+  letter-spacing: 0.4px;
+}
+
+.catalog-item__product-links {
+  position: absolute;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 381px;
+  padding-top: 173px;
+  text-align: center;
+
+  top: 0;
+  left: 0;
+}
+
+.catalog-item__cart-link::before {
+  width: 200px;
+  left: 10px;
+}
+
+.catalog-item__cart-link {
+  position: relative;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.catalog-item__compare-link {
+  font-size: 13px;
+  line-height: 36px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.catalog-item__inner:hover .catalog-item__image {
+  opacity: 0.3;
+}
+
+.catalog-item__inner:hover .catalog-item__product-links {
+  z-index: 2;
+}
+
+.catalog__last-item_no-margin-bottom {
+  margin-bottom: 0;
+}
+
+/*Блок пагниации*/
+.pagination__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
 }
